Fix : 음식점 정보 데이터 수정, 매장 정보 크롤링 py

--- a/data/restaurant_info_data(2)/res_div.ipynb
+++ b/data/restaurant_info_data(2)/res_div.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,7 @@
        "      <th>좌표정보(y)</th>\n",
        "      <th>검색여부</th>\n",
        "      <th>영업상태명</th>\n",
+       "      <th>데이터기준일</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -68,6 +69,7 @@
        "      <td>443873.621189</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8292</th>\n",
@@ -84,6 +86,7 @@
        "      <td>446742.828124</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8293</th>\n",
@@ -100,6 +103,7 @@
        "      <td>447146.555568</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8294</th>\n",
@@ -116,6 +120,7 @@
        "      <td>446609.460134</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8295</th>\n",
@@ -132,6 +137,7 @@
        "      <td>446748.562578</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,15 +165,15 @@
        "8294               서울특별시 강남구 언주로151길 21, 지상1층 (신사동)  202731.421127   \n",
        "8295            서울특별시 강남구 논현로161길 37, 동쪽 지상1층 (신사동)  202153.410454   \n",
        "\n",
-       "            좌표정보(y) 검색여부  영업상태명  \n",
-       "8291  443873.621189   가능  영업/정상  \n",
-       "8292  446742.828124   가능  영업/정상  \n",
-       "8293  447146.555568   가능  영업/정상  \n",
-       "8294  446609.460134   가능  영업/정상  \n",
-       "8295  446748.562578   가능  영업/정상  "
+       "            좌표정보(y) 검색여부  영업상태명      데이터기준일  \n",
+       "8291  443873.621189   가능  영업/정상  2024-02-01  \n",
+       "8292  446742.828124   가능  영업/정상  2024-02-01  \n",
+       "8293  447146.555568   가능  영업/정상  2024-02-01  \n",
+       "8294  446609.460134   가능  영업/정상  2024-02-01  \n",
+       "8295  446748.562578   가능  영업/정상  2024-02-01  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,15 +187,16 @@
     "\n",
     "\n",
     "# 컬럼 순서 바꾸기 -> 보기 좋으라고 바꿈\n",
+    "res_df['데이터기준일'] = '2024-02-01'\n",
     "res_df['검색어'] = res_df['상세주소'] + \" \" + res_df['사업장명']\n",
-    "column_order = ['검색어', '업태구분명', '사업장명', '사업장명_원본', '시도', '지역구', '상세주소', '소재지전체주소', '도로명전체주소', '좌표정보(x)', '좌표정보(y)', '검색여부', '영업상태명']\n",
+    "column_order = ['검색어', '업태구분명', '사업장명', '사업장명_원본', '시도', '지역구', '상세주소', '소재지전체주소', '도로명전체주소', '좌표정보(x)', '좌표정보(y)', '검색여부', '영업상태명','데이터기준일']\n",
     "res_df = res_df[column_order]\n",
     "res_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,12 +205,17 @@
     "지은 = res_df[:div].reset_index(drop=True)\n",
     "정훈 = res_df[div:div*2].reset_index(drop=True)\n",
     "해민 = res_df[div*2:div*3].reset_index(drop=True)\n",
-    "지선 = res_df[div*3:].reset_index(drop=True)"
+    "지선 = res_df[div*3:].reset_index(drop=True)\n",
+    "\n",
+    "지은['담당자'] = '지은'\n",
+    "정훈['담당자'] = '정훈'\n",
+    "해민['담당자'] = '해민'\n",
+    "지선['담당자'] = '지선'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +252,8 @@
        "      <th>좌표정보(y)</th>\n",
        "      <th>검색여부</th>\n",
        "      <th>영업상태명</th>\n",
+       "      <th>데이터기준일</th>\n",
+       "      <th>담당자</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -258,6 +272,8 @@
        "      <td>446099.498941</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
+       "      <td>지선</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -274,6 +290,8 @@
        "      <td>445154.422252</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
+       "      <td>지선</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -290,6 +308,8 @@
        "      <td>447076.943748</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
+       "      <td>지선</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -306,6 +326,8 @@
        "      <td>447261.135628</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
+       "      <td>지선</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -322,6 +344,8 @@
        "      <td>441769.083699</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
+       "      <td>2024-02-01</td>\n",
+       "      <td>지선</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -342,15 +366,15 @@
        "3    서울특별시 강남구 신사동 661-10 지하1층      서울특별시 강남구 압구정로50길 5-12 (신사동,지하1층)   \n",
        "4  서울특별시 강남구 개포동 1231-4번지 지상1층         서울특별시 강남구 개포로22길 10 (개포동,지상1층)   \n",
        "\n",
-       "         좌표정보(x)        좌표정보(y) 검색여부  영업상태명  \n",
-       "0  203282.682258  446099.498941   가능  영업/정상  \n",
-       "1  205210.358779  445154.422252   가능  영업/정상  \n",
-       "2  203955.505490  447076.943748   가능  영업/정상  \n",
-       "3  203405.290504  447261.135628   가능  영업/정상  \n",
-       "4  204151.555648  441769.083699   가능  영업/정상  "
+       "         좌표정보(x)        좌표정보(y) 검색여부  영업상태명      데이터기준일 담당자  \n",
+       "0  203282.682258  446099.498941   가능  영업/정상  2024-02-01  지선  \n",
+       "1  205210.358779  445154.422252   가능  영업/정상  2024-02-01  지선  \n",
+       "2  203955.505490  447076.943748   가능  영업/정상  2024-02-01  지선  \n",
+       "3  203405.290504  447261.135628   가능  영업/정상  2024-02-01  지선  \n",
+       "4  204151.555648  441769.083699   가능  영업/정상  2024-02-01  지선  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
