--- a/naver_매장정보_크롤링(2).ipynb
+++ b/naver_매장정보_크롤링(2).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,12 @@
     "from selenium.webdriver.support.ui import WebDriverWait \n",
     "from selenium.webdriver.support import expected_conditions as EC \n",
     "\n",
-    "# 예외 처리 관련 라이브러리\n",
-    "from selenium.common.exceptions import TimeoutException, NoSuchElementException  \n",
-    "\n",
     "# 웹 요소 찾기 관련 라이브러리\n",
     "from selenium.webdriver.common.by import By  \n",
     "from selenium.webdriver.support.ui import Select  \n",
     "from selenium.webdriver.common.keys import Keys  \n",
+    "import chromedriver_autoinstaller\n",
+    "\n",
     "\n",
     "# 그 외 \n",
     "import time \n",
@@ -38,8 +37,53 @@
     "from bs4 import BeautifulSoup \n",
     "import numpy as np  \n",
     "import pandas as pd \n",
-    "import re  \n",
     "from tqdm import tqdm  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'chromedriver_autoinstaller' has no attribute 'get_chromedriver_filepath'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m chrome_version \u001b[38;5;241m=\u001b[39m chromedriver_autoinstaller\u001b[38;5;241m.\u001b[39mget_chrome_version()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# ChromeDriver의 경로 확인\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m chromedriver_path \u001b[38;5;241m=\u001b[39m \u001b[43mchromedriver_autoinstaller\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_chromedriver_filepath\u001b[49m()\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# 라이브러리 버전 확인\u001b[39;00m\n\u001b[0;32m     10\u001b[0m libraries \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSelenium\u001b[39m\u001b[38;5;124m'\u001b[39m: webdriver\u001b[38;5;241m.\u001b[39m__version__,\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mChromeVersion\u001b[39m\u001b[38;5;124m'\u001b[39m: chrome_version,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWebDriverWait\u001b[39m\u001b[38;5;124m'\u001b[39m: WebDriverWait\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__module__\u001b[39m,\n\u001b[0;32m     19\u001b[0m }\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'chromedriver_autoinstaller' has no attribute 'get_chromedriver_filepath'"
+     ]
+    }
+   ],
+   "source": [
+    "import chromedriver_autoinstaller\n",
+    "\n",
+    "# Chrome 버전 확인\n",
+    "chrome_version = chromedriver_autoinstaller.get_chrome_version()\n",
+    "\n",
+    "# ChromeDriver의 경로 확인\n",
+    "chromedriver_path = chromedriver_autoinstaller.get_chromedriver_filepath()\n",
+    "\n",
+    "# 라이브러리 버전 확인\n",
+    "libraries = {\n",
+    "    'Selenium': webdriver.__version__,\n",
+    "    'ChromeVersion': chrome_version,\n",
+    "    'ChromeDriverPath': chromedriver_path,\n",
+    "    'Pandas': pd.__version__,\n",
+    "    'NumPy': np.__version__,\n",
+    "    'TQDM': tqdm.__version__,\n",
+    "    'BeautifulSoup': BeautifulSoup.__version__,\n",
+    "    'WebDriverWait': WebDriverWait.__module__,\n",
+    "}\n",
+    "\n",
+    "# 텍스트 파일에 버전 정보 저장\n",
+    "with open('library_versions.txt', 'w') as f:\n",
+    "    for library, version in libraries.items():\n",
+    "        f.write(f\"{library}: {version}\\n\")\n",
+    "\n",
+    "print(\"Library versions have been saved to 'library_versions.txt'.\")\n"
    ]
   },
   {
@@ -71,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +262,7 @@
        "4  204151.555648  441769.083699   가능  영업/정상  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -350,18 +394,18 @@
        "2  203955.505490  447076.943748   가능  영업/정상  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "start_num = 0 # 할 차례, 여기를 계속 수정해주세요. \n",
-    "num = 5 # 몇개씩 크롤링할지(기본은 100개를 추천합니다.)\n",
+    "num = 2  # 몇개씩 크롤링할지(기본은 100개를 추천합니다. -> 16분)\n",
     "end_num = start_num + num\n",
-    "res_df = original_df[start_num:end_num] # 맨 마지막 크롤링할떄는 end_num을 지우세요. [start_num:] <-이렇게 \n",
+    "res_df = original_df[start_num:] # 맨 마지막 크롤링할떄는 end_num을 지우세요. [start_num:] <-이렇게 \n",
     "res_df = res_df.reset_index(drop=True)\n",
-    "res_df.head(3)\n"
+    "res_df.head(3)"
    ]
   },
   {
@@ -373,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +426,7 @@
     "\n",
     "\n",
     "# # # webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
-    "# import chromedriver_autoinstaller\n",
+    "# \n",
     "# chromedriver_autoinstaller.install()\n",
     "# driver = webdriver.Chrome()"
    ]
@@ -396,9 +440,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "진행 중:   0%|          | 1/2074 [00:11<6:52:48, 11.95s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "식당 이름: 팔당푸드\n",
+      "식당 카테고리: 한식\n",
+      "주소: 서울 강남구 언주로134길 29\n",
+      "대표 메뉴: 메뉴없음\n",
+      "가격: 가격없음\n",
+      "방문자리뷰 :  556\n",
+      "블로그리뷰 :  3\n",
+      "-----------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "진행 중:   0%|          | 1/2074 [00:16<9:14:22, 16.05s/it]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     19\u001b[0m name \u001b[38;5;241m=\u001b[39m res_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m검색어\u001b[39m\u001b[38;5;124m'\u001b[39m][i]\n\u001b[0;32m     20\u001b[0m driver\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttps://map.naver.com/p/search/\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(name))\n\u001b[1;32m---> 23\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m  \n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m## 화면이 안넘어가고 검색결과에 머물러 있을 때는 entryIframe 이 없음\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m## 그래서 검색어 쳤을때 entryIframe 있으면 --> 화면이 넘어갔다는 뜻이고 \u001b[39;00m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m## 없으면 아직 안넘어간 뜻이니깐 searchIframe 에서 클릭해서 넘어가야함 .\u001b[39;00m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m :\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# 가져올 정보들에 대한 리스트 지정\n",
     "# 가게명, 업태명, 주소, 주력메뉴(맨첫번째메뉴) + 가격까지, 방문자리뷰수,블로그리뷰수\n",
