Fix : naver review 크롤링 수정 (HTTP 접근 에러 수정, 리뷰가 적은 경우 같은 리뷰를 불러오는 에러 해결, 검색어 추가)

--- a/naver_매장존재확인_크롤링.ipynb
+++ b/naver_매장존재확인_크롤링.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,52 +80,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./data/zip_data\\\\fulldata_07_24_04_P_└╧╣▌└╜╜─┴í.csv',\n",
+       " './data/zip_data\\\\fulldata_07_24_05_P_╚▐░╘└╜╜─┴í.csv',\n",
+       " './data/zip_data\\\\fulldata_07_24_01_P_░ⁿ▒ñ╜─┤τ.csv']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# # zip 파일 압축 풀기 \n",
+    "# zip 파일 압축 풀기 \n",
     "\n",
-    "# folder_path = './data'\n",
-    "# zip_folder = './data/zip_data'\n",
+    "folder_path = './data'\n",
+    "zip_folder = './data/zip_data'\n",
     "\n",
-    "# # data 폴더 안에 있는 압축 파일들 압축 풀기\n",
-    "# for file in os.listdir(folder_path):\n",
-    "#     zip_file_path = os.path.join(folder_path, file)\n",
-    "#     if zipfile.is_zipfile(zip_file_path): \n",
-    "#         with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
-    "#             zip_ref.extractall(zip_folder)\n",
+    "# data 폴더 안에 있는 압축 파일들 압축 풀기\n",
+    "for file in os.listdir(folder_path):\n",
+    "    zip_file_path = os.path.join(folder_path, file)\n",
+    "    if zipfile.is_zipfile(zip_file_path): \n",
+    "        with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(zip_folder)\n",
     "\n",
-    "# # csv 파일이 큰 순서대로 정렬\n",
-    "# csv_files_sorted = sorted([os.path.join(zip_folder, f) for f in os.listdir(zip_folder) if f.endswith('.csv')],\n",
-    "#                           key=lambda x: os.path.getsize(x),reverse=True)\n",
-    "# csv_files_sorted"
+    "# csv 파일이 큰 순서대로 정렬\n",
+    "csv_files_sorted = sorted([os.path.join(zip_folder, f) for f in os.listdir(zip_folder) if f.endswith('.csv')],\n",
+    "                          key=lambda x: os.path.getsize(x),reverse=True)\n",
+    "csv_files_sorted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['번호', '개방서비스명', '개방서비스아이디', '개방자치단체코드', '관리번호', '인허가일자', '인허가취소일자',\n",
+       "       '영업상태구분코드', '영업상태명', '상세영업상태코드', '상세영업상태명', '폐업일자', '휴업시작일자', '휴업종료일자',\n",
+       "       '재개업일자', '소재지전화', '소재지면적', '소재지우편번호', '소재지전체주소', '도로명전체주소', '도로명우편번호',\n",
+       "       '사업장명', '최종수정시점', '데이터갱신구분', '데이터갱신일자', '업태구분명', '좌표정보(x)', '좌표정보(y)',\n",
+       "       '문화체육업종명', '문화사업자구분명', '지역구분명', '총층수', '주변환경명', '제작취급품목내용', '보험기관명',\n",
+       "       '건물용도명', '지상층수', '지하층수', '객실수', '건축연면적', '영문상호명', '영문상호주소', '선박총톤수',\n",
+       "       '선박척수', '선박제원', '무대면적', '좌석수', '기념품종류', '회의실별동시수용인원', '시설면적', '놀이기구수내역',\n",
+       "       '놀이시설수', '방송시설유무', '발전시설유무', '의무실유무', '안내소유무', '기획여행보험시작일자',\n",
+       "       '기획여행보험종료일자', '자본금', '보험시작일자', '보험종료일자', '부대시설내역', '시설규모',\n",
+       "       'Unnamed: 63'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 첫번째 데이터 불러오기 (데이터 크기가 커서 둘로 나눈뒤 합침)\n",
+    "chunk_size = 1000000\n",
+    "chunks = pd.read_csv(csv_files_sorted[0], encoding='cp949', encoding_errors='ignore', chunksize=chunk_size)\n",
+    "df1_1 = next(chunks)  # 첫 번째 청크(1,000,000 행) 읽기\n",
+    "df1_2 = pd.concat(chunks, ignore_index=True)  # 나머지 데이터 읽기\n",
+    "\n",
+    "# 현재 운영하고 있는 매장만 가져와서 합치기 \n",
+    "df1_1.drop(df1_1[df1_1['영업상태명'] == '폐업'].index, inplace=True)\n",
+    "df1_2.drop(df1_2[df1_2['영업상태명'] == '폐업'].index, inplace=True)\n",
+    "df1 = pd.concat([df1_1, df1_2], ignore_index=True)\n",
+    "\n",
+    "# 두번째 데이터 불러오기 \n",
+    "df2 = pd.read_csv(csv_files_sorted[1], encoding='cp949', encoding_errors='ignore')\n",
+    "df2.columns\n",
+    "\n",
+    "# 세번째 데이터 불러오기 \n",
+    "df3 = pd.read_csv(csv_files_sorted[2], encoding='cp949', encoding_errors='ignore')\n",
+    "df3.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # 첫번째 데이터 불러오기 (데이터 크기가 커서 둘로 나눈뒤 합침)\n",
-    "# chunk_size = 1000000\n",
-    "# chunks = pd.read_csv(csv_files_sorted[0], encoding='cp949', encoding_errors='ignore', chunksize=chunk_size)\n",
-    "# df1_1 = next(chunks)  # 첫 번째 청크(1,000,000 행) 읽기\n",
-    "# df1_2 = pd.concat(chunks, ignore_index=True)  # 나머지 데이터 읽기\n",
+    "df4 = df3.copy()\n",
     "\n",
-    "# # 현재 운영하고 있는 매장만 가져와서 합치기 \n",
-    "# df1_1.drop(df1_1[df1_1['영업상태명'] == '폐업'].index, inplace=True)\n",
-    "# df1_2.drop(df1_2[df1_2['영업상태명'] == '폐업'].index, inplace=True)\n",
-    "# df1 = pd.concat([df1_1, df1_2], ignore_index=True)\n",
-    "\n",
-    "# # 두번째 데이터 불러오기 \n",
-    "# df2 = pd.read_csv(csv_files_sorted[1], encoding='cp949', encoding_errors='ignore')\n",
-    "# df2.columns\n",
-    "\n",
-    "# # 세번째 데이터 불러오기 \n",
-    "# df3 = pd.read_csv(csv_files_sorted[2], encoding='cp949', encoding_errors='ignore')\n",
-    "# df3.columns"
+    "df4 = df4[9000:15000]\n",
+    "df3.to_excel('dnjsqhsdpeldj.xlsx')"
    ]
   },
   {
