Fix : naver review 크롤링 수정 (HTTP 접근 에러 수정, 리뷰가 적은 경우 같은 리뷰를 불러오는 에러 해결, 검색어 추가)

--- a/naver_tag_review_크롤링.ipynb
+++ b/naver_tag_review_크롤링.ipynb
@@ -566,9 +566,9 @@
     "restaurant_name_list = []\n",
     "review_category_name_list = []\n",
     "\n",
-    "# 지선\n",
     "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
     "\n",
+    "scroll_num = 5\n",
     "\n",
     "for i in range(0,len(new_res_df_test)):\n",
     "  \n",
@@ -597,8 +597,6 @@
     "    except :\n",
     "        print('끝')\n",
     "\n",
-    "\n",
-    "# ---------------- 여기가 수정 -------------------------\n",
     "    # 현재 페이지 URL 가져오기\n",
     "    current_url = driver.current_url\n",
     "\n",
@@ -612,7 +610,9 @@
     "    # 리뷰 스크래핑 시작\n",
     "    try:\n",
     "        # 스크롤\n",
-    "        for _ in range(3):\n",
+    "        for _ in range(scroll_num):\n",
+    "            current_scroll_position = driver.execute_script('return window.scrollY;') # 초기 스크롤 위치 \n",
+    "\n",
     "            driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
     "            time.sleep(2) \n",
     "            \n",
@@ -645,43 +645,59 @@
     "                    pass\n",
     "            # ----------------------------------------------\n",
     "            time.sleep(3)\n",
+    "\n",
+    "            # ---------------스크롤위치가 변하지 않으면 리뷰를 다 크롤링한 것이니까 탈출 -------------------------\n",
+    "            # 현재 스크롤 \n",
+    "            new_scroll_position = driver.execute_script('return window.scrollY;')\n",
+    "\n",
+    "            # 현재 위치와 이전 위치가 같으면 반복문 탈출\n",
+    "            if new_scroll_position == current_scroll_position:\n",
+    "                break\n",
+    "\n",
+    "            # 이전 스크롤 위치 업데이트\n",
+    "            prev_scroll_position = current_scroll_position\n",
+    "            # -------------------------------------------------------------------------------------------------\n",
+    "            \n",
     "            html = driver.page_source\n",
     "            soup = BeautifulSoup(html, 'lxml')\n",
-    "            reviews = soup.select('li.YeINN') \n",
+    "            reviews = soup.select('li.owAeM') \n",
     "\n",
     "        # 리뷰 크롤링 시작\n",
-    "        for r in reviews: \n",
-    "            user_id = r.select_one('div.VYGLG')\n",
-    "            content = r.select_one('div.ZZ4OK.IwhtZ')\n",
-    "            try :\n",
-    "                tag = r.select_one('div.gyAGI span.P1zUJ').text\n",
-    "            except :\n",
+    "        for r in reviews:\n",
+    "            user_id = r.select_one('div.qgLL3 span.P9EZi')\n",
+    "            review_count = r.select_one('div.Gt2_9 span.RNn6x:nth-of-type(1)')\n",
+    "            photo_count = r.select_one('div.Gt2_9 span.RNn6x:nth-of-type(2)')\n",
+    "            \n",
+    "            content = r.select_one('div.vg7Fp span.zPfVt')\n",
+    "            \n",
+    "            try:\n",
+    "                tag = r.select_one('div.ERkm0 span.sIv5s')\n",
+    "            except:\n",
     "                tag = \"\"\n",
-    "            date = r.select('div._7kR3e>span.tzZTd>time')[0]\n",
-    "            revisit = r.select('div._7kR3e>span.tzZTd')[1]\n",
-    "            # revisit = revisit.replace('번째 방문','')\n",
-    "\n",
-    "            # 내용이 없을 때\n",
-    "            user_id = user_id.text if user_id else ''\n",
-    "            content = content.text if content else ''\n",
-    "            tag = tag if tag else ''\n",
-    "            date = date.text if date else ''\n",
-    "            revisit = revisit.text if revisit else ''\n",
-    "            time.sleep(0.06)\n",
-    "\n",
-    "            # 리스트에 추가 \n",
+    "            \n",
+    "            date = r.select_one('div.jxc2b div.D40bm span.CKUdu time')\n",
+    "            revisit = r.select_one('div.jxc2b div.D40bm span.CKUdu:nth-of-type(2)')\n",
+    "            \n",
+    "            # 없는 경우 \n",
+    "            user_id_text = user_id.text if user_id else ''\n",
+    "            review_count_text = review_count.text if review_count else ''\n",
+    "            photo_count_text = photo_count.text if photo_count else ''\n",
+    "            content_text = content.text if content else ''\n",
+    "            tag_text = tag.text if tag else ''\n",
+    "            date_text = date.text if date else ''\n",
+    "            revisit_text = revisit.text.replace('번째 방문', '') if revisit else ''\n",
+    "            \n",
+    "            # 리스트에 합치기\n",
     "            restaurant_name_list.append(name)\n",
-    "            user_id_list.append(user_id)\n",
-    "            content_list.append(content)\n",
-    "            review_category_name_list.append(tag)\n",
-    "            date_list.append(date)\n",
-    "            revisit_list.append(revisit)    \n",
+    "            user_id_list.append(user_id_text)\n",
+    "            review_category_name_list.append(tag_text)\n",
+    "            date_list.append(date_text)\n",
+    "            revisit_list.append(revisit_text)\n",
+    "            content_list.append(content_text)\n",
     "\n",
     "    except Exception as e:\n",
     "        print(e)\n",
     "\n",
-    "    finally:\n",
-    "        driver.quit()\n",
     "\n",
     "# 데이터프레임 얹히기\n",
     "review_data_list = {\n",
@@ -696,7 +712,7 @@
     "# 리뷰 데이터 프레임 완성\n",
     "review_result_df = pd.DataFrame(review_data_list)\n",
     "\n",
-    "review_result_df\n"
+    "review_result_df"
    ]
   },
   {
@@ -709,94 +725,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 원본\n",
-    "\n",
-    "url = 'https://m.place.naver.com/restaurant/13149660/review/visitor?entry=pll'\n",
-    "\n",
-    "# 매장명\n",
-    "place = '강남역_서브웨이'\n",
-    "\n",
-    "# 리뷰 스크래핑 시작\n",
-    "try:\n",
-    "    driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "    res = driver.get(url)\n",
-    "    driver.implicitly_wait(2)\n",
-    "\n",
-    "    # 스크롤\n",
-    "    for _ in range(3):\n",
-    "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "        time.sleep(2) \n",
-    "        \n",
-    "        # '더보기' 클릭\n",
-    "        more_button = driver.find_element(By.XPATH, '//div[@class=\"lfH3O\"]/a[@role=\"button\"]')\n",
-    "        more_button.click()\n",
-    "\n",
-    "        # 이걸 하니까 적당한 사람 myplace url 생김. 상단 3명 url 가져오라고 할까?\n",
-    "        # try:\n",
-    "        #     while True:\n",
-    "        #         driver.find_element(By.XPATH, '//*[@id=\"app-root\"]/div/div/div/div[6]/div[2]/div[3]/div[2]/div/a').click()\n",
-    "        #         time.sleep(0.4)\n",
-    "        # except Exception as e:\n",
-    "        #     print('finish')\n",
-    "\n",
-    "    time.sleep(3)\n",
-    "    html = driver.page_source\n",
-    "    bs = BeautifulSoup(html, 'lxml')\n",
-    "    reviews = bs.select('li.YeINN')\n",
-    "\n",
-    "    for r in reviews: # 왜 안돌아가?\n",
-    "        user_id = r.select_one('div.VYGLG')\n",
-    "        content = r.select_one('div.ZZ4OK.IwhtZ')\n",
-    "        try :\n",
-    "            tag = r.select_one('div.gyAGI span.P1zUJ').text\n",
-    "        except :\n",
-    "            tag = \"\"\n",
-    "        date = r.select('div._7kR3e>span.tzZTd>time')[0]\n",
-    "        revisit = r.select('div._7kR3e>span.tzZTd')[1]\n",
-    "\n",
-    "        # 아무것도 없을 때\n",
-    "        user_id = user_id.text if user_id else ''\n",
-    "        content = content.text if content else ''\n",
-    "        tag = tag if tag else ''\n",
-    "        date = date.text if date else ''\n",
-    "        revisit = revisit.text if revisit else ''\n",
-    "        time.sleep(0.06)\n",
-    "\n",
-    "        # Append data to lists\n",
-    "        user_id_list.append(user_id)\n",
-    "        content_list.append(content)\n",
-    "        review_category_name_list.append(tag)\n",
-    "        date_list.append(date)\n",
-    "        revisit_list.append(revisit)            \n",
-    "\n",
-    "except Exception as e:\n",
-    "    print(e)\n",
-    "\n",
-    "finally:\n",
-    "    driver.quit()\n",
-    "\n",
-    "# Create a DataFrame\n",
-    "review_data_list = {\n",
-    "    #'매장명': restaurant_name_list,\n",
-    "    'user_id': user_id_list,\n",
-    "    'content': content_list,\n",
-    "    'date': date_list,\n",
-    "    'revisit': revisit_list,\n",
-    "    'tag': review_category_name_list\n",
-    "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 태그 데이터 프레임 완성\n",
-    "review_result_df = pd.DataFrame(review_data_list)\n",
-    "\n",
-    "review_result_df"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
